--- a/01/package.json
+++ b/01/package.json
@@ -10,7 +10,12 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "react": "^18.2.0",
     "ts-node": "^10.9.1",
+    "ts-toolbelt": "^9.6.0",
     "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@types/react": "^18.0.27"
   }
 }
